--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-modemmanager (1.7.997-1) UNRELEASED; urgency=medium
+modemmanager (1.7.990-1) UNRELEASED; urgency=medium
 
+  * New upstream version 1.7.990.
   * debian/control: Bump libqmi-glib-dev and libmbim-glib-dev Depends to new
     required versions (libmbim > 1.16, libqmi > 1.20) for this release.
 
