--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ modemmanager (1.7.990-1) UNRELEASED; urgency=medium
   * New upstream version 1.7.990.
   * debian/control: Bump libqmi-glib-dev and libmbim-glib-dev Depends to new
     required versions (libmbim > 1.16, libqmi > 1.20) for this release.
+  * Update Maintainer field for my 'real' address.
 
  -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Fri, 23 Feb 2018 09:48:39 -0500
 
