--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ modemmanager (1.7.990-1) UNRELEASED; urgency=medium
     required versions (libmbim > 1.16, libqmi > 1.20) for this release.
   * Update Maintainer field for my 'real' address.
   * debian/control: Update Vcs-* fields: moved project to salsa.d.o.
+  * debian/control: Bump to Standards-Version 4.1.3.
 
  -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Fri, 23 Feb 2018 09:48:39 -0500
 
