--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ modemmanager (1.7.990-1) UNRELEASED; urgency=medium
   * Update Maintainer field for my 'real' address.
   * debian/control: Update Vcs-* fields: moved project to salsa.d.o.
   * debian/control: Bump to Standards-Version 4.1.3.
+  * debian/copyright:
+    - Fix Format: URL to use https.
+    - Drop extra stanza for libwmc; it really is only GPL2, not GPL2+.
 
  -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Fri, 23 Feb 2018 09:48:39 -0500
 
