--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,7 @@ modemmanager (1.7.990-1) UNRELEASED; urgency=medium
   * New upstream version 1.7.990.
   * debian/control: Bump libqmi-glib-dev and libmbim-glib-dev Depends to new
     required versions (libmbim > 1.16, libqmi > 1.20) for this release.
-  * Update Maintainer field for my 'real' address.
+  * Update Maintainer field for my 'real' address. (Closes: #884617)
   * debian/control: Update Vcs-* fields: moved project to salsa.d.o.
   * debian/control: Bump to Standards-Version 4.1.3.
   * debian/copyright:
