Import Debian changes 1.7.990-1
modemmanager (1.7.990-1) unstable; urgency=medium

  * New upstream version 1.7.990.
  * debian/control: Bump libqmi-glib-dev and libmbim-glib-dev Depends to new
    required versions (libmbim > 1.16, libqmi > 1.20) for this release.
  * Update Maintainer field for my 'real' address. (Closes: #884617)
  * debian/control: Update Vcs-* fields: moved project to salsa.d.o.
  * debian/control: Bump to Standards-Version 4.1.3.
  * debian/copyright:
    - Fix Format: URL to use https.
    - Drop extra stanza for libwmc; it really is only GPL2, not GPL2+.
  * debian/rules: set DPKG_GENSYMBOLS_CHECK_LEVEL=4; more verbose when there
    are added/changed symbols.
  * debian/libmm-glib0.symbols: update symbols for new release.
  * debian/patches/default_strict_probing_policy.patch: set the filtering
    policy for probing to 'strict' by default: this will avoid probing devices
    that are not modems, and potentially interfering with RNGs, braille, etc.
    (Closes: #683839)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-modemmanager (1.7.990-1) UNRELEASED; urgency=medium
+modemmanager (1.7.990-1) unstable; urgency=medium
 
   * New upstream version 1.7.990.
   * debian/control: Bump libqmi-glib-dev and libmbim-glib-dev Depends to new
@@ -17,7 +17,7 @@ modemmanager (1.7.990-1) UNRELEASED; urgency=medium
     that are not modems, and potentially interfering with RNGs, braille, etc.
     (Closes: #683839)
 
- -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Fri, 23 Feb 2018 09:48:39 -0500
+ -- Mathieu Trudel-Lapierre <mathieu.tl@gmail.com>  Thu, 01 Mar 2018 09:20:02 -0500
 
 modemmanager (1.6.8-2) unstable; urgency=medium
 
