--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+modemmanager (1.14.6-0.1) unstable; urgency=medium
+
+  * Non-maintainer upload.
+  * New upstream version.
+
+ -- Martin <debacle@debian.org>  Wed, 14 Oct 2020 15:11:13 +0000
+
 modemmanager (1.14.2-0.1) unstable; urgency=medium
 
   * Non-maintainer upload.
