--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+modemmanager (1.14.8-0.1) unstable; urgency=medium
+
+  * Non-maintainer upload.
+  * New upstream version.
+
+ -- Martin <debacle@debian.org>  Mon, 16 Nov 2020 12:22:26 +0000
+
 modemmanager (1.14.6-0.1) unstable; urgency=medium
 
   * Non-maintainer upload.
