--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+modemmanager (1.14.10-0.1) unstable; urgency=medium
+
+  * Non-maintainer upload.
+  * New upstream version.
+  * Add upstream signing key.
+
+ -- Martin <debacle@debian.org>  Sat, 16 Jan 2021 17:23:28 +0000
+
 modemmanager (1.14.8-0.1) unstable; urgency=medium
 
   * Non-maintainer upload.
