--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,17 @@
-modemmanager (1.14.10-0.2) UNRELEASED; urgency=medium
+modemmanager (1.14.12-0.1) unstable; urgency=medium
 
   * Non-maintainer upload.
+  * New upstream version, bug fixes only, no new features.
+    - MBIM:
+      - Plug memleak in disconnection logic.
+      - Don't fail IPv4v6 connection attempt if only IPv4 succeeds.
+    - QMI:
+      - Fix network registration cancellation logic with asserts disabled.
+
+  [ Helmut Grohne ]
   * Annotate dbus dependency <!nocheck>. (Closes: #980827)
 
- -- Helmut Grohne <helmut@subdivi.de>  Fri, 22 Jan 2021 22:25:52 +0100
+ -- Martin <debacle@debian.org>  Fri, 12 Mar 2021 18:09:44 +0000
 
 modemmanager (1.14.10-0.1) unstable; urgency=medium
 
