--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 modemmanager (1.16.6-1) UNRELEASED; urgency=medium
 
   * New upstream version
+  * debian/libmm-glib0.symbols:
+    - updated for the new version
 
  -- Sebastien Bacher <seb128@ubuntu.com>  Tue, 22 Jun 2021 12:50:39 +0200
 
