--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-modemmanager (1.16.6-1) UNRELEASED; urgency=medium
+modemmanager (1.16.6-1) experimental; urgency=medium
 
   * New upstream version
   * debian/control.in:
@@ -6,7 +6,7 @@ modemmanager (1.16.6-1) UNRELEASED; urgency=medium
   * debian/libmm-glib0.symbols:
     - updated for the new version
 
- -- Sebastien Bacher <seb128@ubuntu.com>  Tue, 22 Jun 2021 12:50:39 +0200
+ -- Sebastien Bacher <seb128@ubuntu.com>  Fri, 25 Jun 2021 11:28:12 +0200
 
 modemmanager (1.14.12-0.1) unstable; urgency=medium
 
