--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-modemmanager (1.16.6-2) UNRELEASED; urgency=medium
+modemmanager (1.16.6-2) experimental; urgency=medium
 
   * debian/control: include python build-depends for tests
 
- -- Sebastien Bacher <seb128@debian.org>  Fri, 25 Jun 2021 15:31:13 +0200
+ -- Sebastien Bacher <seb128@debian.org>  Fri, 25 Jun 2021 15:32:16 +0200
 
 modemmanager (1.16.6-1) experimental; urgency=medium
 
